colocando migrate no buildspec-vpc

--- a/pipeline/buildspec-vpc.yml
+++ b/pipeline/buildspec-vpc.yml
@@ -16,7 +16,7 @@ phases:
       - VITE_API_URL=http://localhost:3001 npm run build --prefix client         
       - echo realizando testes unitários...
       - npm test
-      - criando o banco...
+      - echo criando o banco...
       - npx sequelize db:create
       - echo criando tabelas no banco...
       - npx sequelize db:migrate
