colocando migrate no buildspec-vpc

--- a/pipeline/buildspec-vpc.yml
+++ b/pipeline/buildspec-vpc.yml
@@ -17,7 +17,7 @@ phases:
       - echo realizando testes unitários...
       - npm test
       - echo criando o banco...
-      - npx sequelize db:create
+      # npx sequelize db:create
       - echo criando tabelas no banco...
       - npx sequelize db:migrate
       #- echo parada para verificar...
